--- a/src/sass/_index/_wrapper.sass
+++ b/src/sass/_index/_wrapper.sass
@@ -5,5 +5,19 @@
   height: 100vh
   overflow: hidden
 
+.section
+  padding-top: 20px
+  padding-bottom: 20px
+  padding-left: 50px
+  padding-right: 50px
+  border-radius: 3px
+  background: linear-gradient(145deg, #530e80, #621198)
+  box-shadow:  20px 20px 60px #4e0e79, -20px -20px 60px #6a12a3
+
 .my-title
   text-transform: uppercase
+
+.my-title,
+.item-descr,
+.timeout
+  color: #19AEFF
